Update autoexec; added radiopanel
Update autoexec; added radiopanel

--- a/autoexecbackup/autoexec.cfg
+++ b/autoexecbackup/autoexec.cfg
@@ -27,11 +27,11 @@
 
 //-language english -novid -threads 4 -full -freq 60 -tickrate 128 -console -high -processheap -nod3d9ex -nojoy -noforcemaccel -noforcemspd -useforcedmparms -noaafonts +mat_queue_mode 2 -dxlevel 90 -noaafonts +exec autoexec
 
-developer 1
-con_enable "1"
-con_filter_text "Damage Given"
+developer "1"
+con_filter_text "Damage"
 con_filter_text_out "Player:"
 con_filter_enable "2"
+con_enable "1"
 
 //*************************************************************************************************************************************\
 //*************************************************************************************************************************************\
@@ -54,7 +54,6 @@ con_filter_enable "2"
 // hkp2000	- P2000 			(Counter-Terrorists Only)
 // p250/p228	- Sig-Sauer P250
 // deagle	- Night Hawk .50C
-// revolver - R8 Revolver
 // elite	- .40 Dual Elites
 // fiveseven	- ES Five-Seven
 // nova		- 12 Gauge
@@ -84,7 +83,6 @@ con_filter_enable "2"
 // primammo	- Primary Ammo
 // secammo	- Secndary Ammo
 
-alias revolver "buy revolver;give weapon_revolver"
 alias glock "buy glock;give weapon_glock"
 alias scout "buy ssg08;give weapon_ssg08"
 alias xm1014 "buy xm1014;give weapon_xm1014"
@@ -125,8 +123,8 @@ alias infinite1 "sv_infinite_ammo 2"
 alias dd2 "map de_dust2;exec gamemode_casual;mp_freezetime 0;sv_cheats 1;mp_buytime 9999;sv_infinite_ammo 2;"
 alias html "toggle cl_disablehtmlmotd"
 
-alias afk1 "+forward; +moveleft; +left;" // Start afk
-alias afk2 "-forward; -moveleft; -left;" // End afk
+alias afk1 "+forward; +moveleft; +left;"
+alias afk2 "-forward; -moveleft; -left;"
 
 alias "m4a4"     "buy m4a1;give weapon_m4a1"
 alias "m4"     "buy m4a1;give weapon_m4a1"
@@ -201,8 +199,6 @@ alias "sg556"     "buy sg556;give weapon_sg556"
 alias "sg"     "buy sg557;give weapon_sg557"
 alias "ssg08"     "buy ssg08;give weapon_ssg08"
 alias "taser"     "buy taser;give weapon_taser"
-alias "revolvo" "buy revolver;give weapon_revolver"
-alias "r8" "buy revolver;give weapon_revolver"
 alias "zeus"     "buy taser;give weapon_taser"
 alias "tec9"     "buy tec9;give weapon_tec9"
 alias "ump45"     "buy ump45;give weapon_ump45"
@@ -273,11 +269,9 @@ bind "F7" "chatfun"
 alias "mmrank" "rank"
 alias "rank" "say Current Rank: Gold Distinguished Nova Silver Global Legendary Guardian Supreme Master Eagle Class Elite"
 
- /////////////////////////////
- // Show crosshair Settings //
- /////////////////////////////
-// Display your crosshair at the press of a button in your console ofc
-alias "a1" echo " "
+// *********** 7 **********
+//Show crosshair Settings and viewmodel Settings
+alias "a1" clear
 alias "a2" echo "*********************************************";
 alias "a3" echo "YOUR CURRENT CROSSHAIR SETTINGS;"
 alias "a4" echo "*********************************************";
@@ -290,47 +284,42 @@ alias "a10" host_writeconfig //
 alias "a11" developer 0
 alias "a12" con_filter_enable 0
 alias "a13" showconsole
- 
 alias "showcrosshair" "a1;a2;a3;a4;a5;a6;a7;a8;a9;a10;a11;a12;a13"
+//bind ins "showcrosshair"
+// BIND WHAVETER KEY YOU WANT OR JUST PUT // IN FRONT TO DISABLE THE SCRIPT
 
-/////////////////////////////
-// Show viewmodel Settings //
-/////////////////////////////
-
-alias "b1" echo " "
-alias "b2" echo "*********************************************";
-alias "b3" echo "YOUR CURRENT VIEWMODEL SETTINGS;
-alias "b4" echo "*********************************************";
-alias "b5" developer 2
-alias "b6" con_filter_enable 1
-alias "b7" con_filter_text viewmodel
-alias "b8" host_writeconfig //
-alias "b9" con_filter_text view_punch
-alias "b10" host_writeconfig //
-alias "b11" developer 0
-alias "b12" con_filter_enable 0
-alias "b13" showconsole
- 
- alias "showviewmodel" "b1;b2;b3;b4;b5;b6;b7;b8;b9;b10;b11;b12;b13"
+// *********** 6 **********
+//Show viewmodel Settings
+alias "b1" con_enable 1
+alias "b2" toggleconsole
+alias "b3" clear
+alias "c1" echo "*********************************************";
+alias "c2" echo "YOUR CURRENT VIEWMODEL SETTINGS;"
+alias "c3" echo "*********************************************";
+alias "b4" con_filter_enable 1
+alias "b5" con_filter_text viewmodel_
+alias "b6" developer 2
+alias "b7" host_writeconfig vmodel_shareconf
+alias "b8" con_filter_text_out Achievements
+alias "b9" con_filter_text cl_bob_lower_amt
+alias "b10" host_writeconfig vmodel_shareconf
+alias "b11" confilter_text cl_bobamt_
+alias "b12" host_writeconfig vmodel_shareconf
+alias "b13" con_filter_text cl_bobcycle
+alias "b14" host_writeconfig vmodel_shareconf
+alias "b15" con_filter_enable 0
+alias "b16" developer 0
+alias "showviewmodels" "b1;b2;b3;c1;c2;c3;b4;b5;b6;b7;b8;b9;b10;b11;b12;b13;b14;b15;b16"
+//bind del "showviewmodels"
+alias "c3a3" echo ".";
 
 alias "c4a1" developer 1
 alias "c4a2" con_filter_text "Damage"
 alias "c4a3" con_filter_text_out "Player:"
 alias "c4a4" con_filter_enable "2"
 alias "c4a5" con_enable "1"
-alias "c4a6" con_filter_text_out "game:mapgroupname"
-alias "c4a7" con_filter_text "game:map"
 
-alias "showall" "a1;a2;a3;a4;a5;a6;a7;a8;a9;a10;a11;a12;b1;b2;b3;b4;b5;b6;b7;b8;b9;b10;b11;b12;b13c4a1;c4a2;c4a3;c4a4;c4a5"
-alias "mmmap" "c4a1;c4a5;c4a7;c4a6;c4a4"
-alias "damage" "c4a1;c4a5;c4a2;c4a3;c4a4"
-
-alias "q" "quit"
-alias "qq" "exec vacban.cfg"
-alias "qqq" "exec vacban.cfg" 
-alias "dc" "exec vacban.cfg"
-alias rr "mp_restartgame 1"
-alias rrr "rcon mp_restartgame 1"
+alias "showchvm" "a1;a2;a3;a4;a5;a6;a7;a8;a9;a10;a11;a12;c3a3;b1;b2;c1;c2;c3;b4;b5;b6;b7;b8;b9;b10;b11;b12;b13;b14;b15;b16;a13;c4a1;c4a2;c4a3;c4a4;c4a5"
 
 alias trolol "say glhf                                                          Player I  n  A  G  i  i  Z has left the game. (VAC banned from secure server)"
 alias trolol2 "say glhf                                                          VAC has detected a cheater on this server."
@@ -342,8 +331,8 @@ alias -jumpthrow "-jump"
 alias "-crosshairsmoke" "cl_crosshairsize 2;cl_crosshairdot 0;cl_crosshairgap -2"
 alias "+crosshairsmoke" "cl_crosshairsize 1337;cl_crosshairdot 1;cl_crosshairgap 10"
 
-alias +bomb1 "gameinstructor_enable 1; cl_autowepswitch 1; cl_clearhinthistory; cl_crosshairsize 1337;cl_crosshairdot 1;cl_crosshairgap 10"
-alias -bomb1 "gameinstructor_enable 0; cl_autowepswitch 0; cl_clearhinthistory; cl_crosshairsize 2;cl_crosshairdot 0;cl_crosshairgap -2"
+alias +bomb1 "gameinstructor_enable 1; cl_autowepswitch 1; cl_crosshairsize 1337;cl_crosshairdot 1;cl_crosshairgap 10"
+alias -bomb1 "gameinstructor_enable 0; cl_autowepswitch 0; cl_crosshairsize 2;cl_crosshairdot 0;cl_crosshairgap -2"
 bind "t" "+bomb1"
 
 alias "output" "echo .;echo .;echo .;echo .;echo .;echo .;echo .;echo #######################;echo #######################;echo Custom config executed!;echo #######################;echo #######################;echo .;echo Config edited by InAGiiZ;echo .;echo .;echo F1 - Change Crosshair Color;echo F8 - Suicide;echo F9 - Exec Autoconfig.exe;echo L - Change Radar Scale;echo O - Enable/Disable Voice Chat; echo P - Toggle Volume (8% or 45%)";
@@ -351,14 +340,11 @@ alias "+autoexecute" "exec autoexec.cfg;con_filter_enable 0;"
 alias "-autoexecute" "output;con_filter_enable 2;"
 bind "F9" "+autoexecute"
 
-alias voicechaton "voice_scale 0.65;bind O voicechatoff;playvol buttons\blip1 1"
-alias voicechatoff "voice_scale 0;bind O voicechaton;playvol buttons\blip2 1"
+alias voicechaton "voice_enable 1;bind O voicechatoff;playvol buttons\blip1 1"
+alias voicechatoff "voice_enable 0;bind O voicechaton;playvol buttons\blip2 1"
 
-alias regenon "sv_regeneration_force_on 1" // regen life > sv_cheats 1
+alias regenon "sv_regeneration_force_on 1"
 alias regenoff "sv_regeneration_force_on 0"
-
-alias avataron "cl_hud_playercount_showcount 0"
-alias avataroff "cl_hud_playercount_showcount 1"
 
 //name:
 //ᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠᅠ1
@@ -434,27 +420,23 @@ alias "chat_0" "voice_enable 0; playvol buttons\blip2 0.5; alias voice_chat chat
 
 // Crosshair
 
-cl_crosshair_drawoutline "1"
-cl_crosshair_dynamic_maxdist_splitratio "0.35"
-cl_crosshair_dynamic_splitalpha_innermod "1"
-cl_crosshair_dynamic_splitalpha_outermod "0.5"
-cl_crosshair_dynamic_splitdist "7"
-cl_crosshair_outlinethickness "1"
-cl_crosshairalpha "255"
-cl_crosshaircolor "2"
-cl_crosshaircolor_b "255"
-cl_crosshaircolor_g "255"
-cl_crosshaircolor_r "0"
+cl_crosshairalpha "200"
+cl_crosshaircolor "1"
+cl_crosshaircolor_b "50"
+cl_crosshaircolor_r "50"
+cl_crosshaircolor_g "250"
 cl_crosshairdot "0"
-cl_crosshairgap "-2"
-cl_crosshairgap_useweaponvalue "0"
-cl_crosshairscale "1000"
-cl_crosshairsize "2"
+cl_crosshairgap "-1"
+cl_crosshairsize "3"
 cl_crosshairstyle "4"
-cl_crosshairthickness "0.5"
 cl_crosshairusealpha "1"
-cl_fixedcrosshairgap "0"
+cl_crosshairthickness "1"
+cl_fixedcrosshairgap "-1"
+cl_crosshair_outline "0"
+cl_crosshair_outline_draw "0"
+exec 1crosshair_banana
 
+//exec 20colorcrosshair
 alias "colorcrosshair" "colorcrosshair_0"
 alias "colorcrosshair_0" "alias colorcrosshair colorcrosshair_1; cl_crosshaircolor 0; echo **CROSSHAIR IS GREEN**"
 alias "colorcrosshair_1" "alias colorcrosshair colorcrosshair_2; cl_crosshaircolor 1; echo **CROSSHAIR IS RED**"
@@ -476,7 +458,8 @@ alias "colorcrosshair_16" "alias colorcrosshair colorcrosshair_17; cl_crosshairc
 alias "colorcrosshair_17" "alias colorcrosshair colorcrosshair_18; cl_crosshaircolor 5; cl_crosshaircolor_r 255; cl_crosshaircolor_g 0; cl_crosshaircolor_b 255; echo **CROSSHAIR IS MAGENTA**"
 alias "colorcrosshair_18" "alias colorcrosshair colorcrosshair_19; cl_crosshaircolor 5; cl_crosshaircolor_r 255; cl_crosshaircolor_g 192; cl_crosshaircolor_b 203; echo **CROSSHAIR IS PINK**"
 alias "colorcrosshair_19" "alias colorcrosshair colorcrosshair_0; cl_crosshaircolor 5; cl_crosshaircolor_r 0; cl_crosshaircolor_g 100; cl_crosshaircolor_b 0; echo **CROSSHAIR IS DARKGREEN**"
-bind "f1" "colorcrosshair" // F1 = change color
+bind "f1" "colorcrosshair"
+//f1 = change color
 
 /*************************************************************************************************************************************\
 /*************************************************************************************************************************************\
@@ -496,52 +479,42 @@ viewmodel_offset_z "-2"
 
 // Bobbing and movement shifting
 
-cl_bob_lower_amt "0" // 5-30
-cl_bobamt_lat "0" // 0.1-2
-cl_bobamt_vert "0" //0.1-2
+cl_bob_lower_amt "5" // 5-30
+cl_bobamt_lat "0.1" // 0.1-2
+cl_bobamt_vert "0.1" //0.1-2
 cl_bobcycle "2" // forced to 0.98! Values: 0.1-2
-cl_viewmodel_shift_left_amt "0" // 0.5-2
-cl_viewmodel_shift_right_amt "0" // 0.25-2
+cl_viewmodel_shift_left_amt "0.5" // 0.5-2
+cl_viewmodel_shift_right_amt "0.25" // 0.25-2
 
 //*************************************************************************************************************************************\
 //*************************************************************************************************************************************\
 
 // Audio
 
-volume "0.160000"
+volume "0.080000"
 snd_musicvolume "0.700000"
 snd_legacy_surround "0"
-soundscape_flush "9999"
 snd_mute_losefocus "0"
 windows_speaker_config "1"
 voice_enable "1"
 voice_scale "0.650000"
 snd_mixahead "0.05"
-snd_headphone_pan_exponent "1.2"
-snd_headphone_pan_radial_weight "0.5"
-snd_front_headphone_position "53.2" // 45.0 (4:3 resolution), 50.2 (16:10 resolution), or 53.2 (16:9 resolution)
-snd_rear_headphone_position "90.0"
-snd_setmixer PlayerFootsteps vol "0.5"
-snd_setmixer GlobalFootsteps vol "1.2"
-snd_setmixer Ambient vol "0"
+snd_headphone_pan_exponent "2"
+snd_headphone_pan_radial_weight "2"
 snd_pitchquality "1"
 dsp_enhance_stereo "0"
-dsp_slow_cpu "1"
 soundscape_fadetime "9999"
-cl_soundfile "0"
-snd_duckerattacktime "0.5"
-snd_duckerreleasetime "2.5"
-snd_duckerthreshold "0.15"
-snd_ducktovolume "0.55"
-snd_deathcamera_volume "0"
-snd_mapobjective_volume "0"
-snd_menumusic_volume "0"
-suitvolume "0"
-voice_enable "1"
-voice_loopback "0"
-voice_forcemicrecord "1"
-voice_modenable "1"
-lobby_voice_chat_enabled "0"
+cl_soundfile 0
+snd_duckerattacktime 0.5
+snd_duckerreleasetime 2.5
+snd_duckerthreshold 0.15
+snd_ducktovolume 0.55
+suitvolume 0
+voice_enable 1
+voice_loopback 0
+voice_forcemicrecord 1
+voice_modenable 1
+lobby_voice_chat_enabled 1
 
 snd_roundend_volume "0.000000"
 snd_roundstart_volume "0.000000"
@@ -550,43 +523,28 @@ snd_tensecondwarning_volume "0.700000"
 //*************************************************************************************************************************************\
 //*************************************************************************************************************************************\
 
-/////////////////////////////
-// Rates and Interpolation //
-/////////////////////////////
-cl_cmdrate "64"
-cl_updaterate "64"
-cl_interp "0"
-cl_interp_ratio "2"
-rate "64000"
+// Rates and Interpolation
 
-// Aliases so I can quickly change the tickrate settings when I want to change servers.
-
-alias "128tick" "cl_cmdrate 128; cl_updaterate 128; rate 128000; print128tick"
-alias "64tick" "cl_cmdrate 64; cl_updaterate 64; rate 64000; print64tick"
-alias "32tick" "cl_cmdrate 32; cl_updaterate 32; rate 32000; print32tick"
-
-alias "print128tick" "echo cl_cmdrate 128, cl_updaterate 128, rate 128000"
-alias "print64tick" "echo cl_cmdrate 64, cl_updaterate 64, rate 64000"
-alias "print32tick" "echo cl_cmdrate 32, cl_updaterate 32, rate 32000"
-
+rate 128000
 cl_interpolate 1
+cl_interp_ratio 2
 cl_predict 1
 cl_lagcompensation 1
+cl_cmdrate 128
+cl_updaterate 128
+cl_interp 0
 cl_timeout 9999999
 cl_resend 1.5 // 6 default
 cl_resend_timeout 4.5
 net_maxroutable 1260
-cl_downloadfilter "nosounds"
-cl_allowupload "0"
-cl_allowdownload "1"
 
 //*************************************************************************************************************************************\
 //*************************************************************************************************************************************\
 
 // FPS Settings and Net Graph
 
-fps_max "499"
-fps_max_menu "101"
+fps_max "0"
+fps_max_menu "0"
 cl_showfps "2"
 net_graph "1"
 net_graphheight "64"
@@ -601,7 +559,7 @@ net_graphsolid 1;
 // Radar Settings and HUD
 
 cl_showpos "0"
-cl_radar_always_centered "0" //Always Centered
+cl_radar_always_centered 0 //Always Centered
 cl_radar_icon_scale_min "0.6" // Icon Scale (icons is your teammates, the bomb, etc)
 cl_radar_rotate "0" // Radar Rotate! 1-Yes 0-no                          
 cl_radar_scale "0.35"
@@ -618,7 +576,7 @@ cl_hud_color "5" // 0 = default, 1 = white, 2 = light blue, 3 = dark blue, 4 = p
 cl_hud_healthammo_style "0"
 cl_hud_playercount_pos "1"
 cl_hud_playercount_showcount "1"
-cl_hud_radar_scale "1.2"
+cl_hud_radar_scale "0"
 
 //*************************************************************************************************************************************\
 //*************************************************************************************************************************************\
@@ -632,6 +590,7 @@ m_customaccel "0"
 m_mousespeed "0"
 m_mouseaccel1 "0"
 m_mouseaccel2 "0"
+zoom_sensitivity_ratio_mouse "1"
 m_customaccel_exponent 1;
 m_customaccel_max 0;
 m_customaccel_scale 0;
@@ -647,6 +606,7 @@ cl_showhelp "0"
 cl_autowepswitch "0" // SET THIS TO 0!!! 1 = Automatically switch to better weapon if picked up.
 cl_disablefreezecam "1"
 cl_disablehtmlmotd "1"
+cl_downloadfilter "nosounds"
 cl_freezecameffects_showholiday "0"
 cl_forcepreload "1"
 cl_righthand "0"
@@ -661,8 +621,6 @@ option_duck_method "0"
 option_speed_method "0"
 player_nevershow_communityservermessage "1" // 1 = the popup when browsing commnunity servers wont show up anymore.
 ui_steam_overlay_notification_position "topright"
-r_cheapwaterend "1" 
-r_cheapwaterstart "1" 
 r_drawtracers_firstperson "0"
 cl_predictweapons "1"
 // cl_scoreboard_mouse_enable_binding "+use"
@@ -682,7 +640,7 @@ r_lightstyle "-1"
 r_radiosity "4"
 r_skin "0"
 r_updaterefracttexture "0"
-muzzleflash_light "1"
+muzzleflash_light "0"
 sys_antialiasing "0"
 sys_aspectratio "-1"
 sys_refldetail "0"
@@ -692,12 +650,9 @@ mm_session_search_ping_limit "90"
 cl_showerror "0"
 password ""
 cl_join_advertise "2"
-cl_clearhinthistory
-cl_debugrumble "0"
-adsp_debug "0"
 
 // mat_ settings
-mat_queue_mode "-1" // launch options -> 2
+mat_queue_mode "-1"
 mat_bloomamount_rate "0.05f"
 mat_bumpbasis "0"
 mat_debugalttab "0"
@@ -765,7 +720,7 @@ bind "." "buy secammo"
 bind "h" "+jumpthrow;spec_prev"
 bind "n" "no_clip"
 bind "F11" "toggleconsole"                           // F11, opens and closes - console
-bind "P" "toggle volume 0.16 0.45"                   // volume toggle, will turn the volume up or down when pressing P
+bind "P" "toggle volume 0.08 0.45"                   // volume toggle, will turn the volume up or down when pressing P
 bind "O" "voicechaton"                   // enables and disables voice communication when pressing O
 bind "[" "kill; say Heart.exe has stopped working! Gaben is checking for a solution to the problem..."
 bind "F8" ""
@@ -795,7 +750,7 @@ ECHO H - Jump Throw (nade script)
 ECHO L - Change Radar Scale
 ECHO N - No Clip
 ECHO O - Enable/Disable Voice Chat
-ECHO P - Toggle Volume (16% or 45%)
+ECHO P - Toggle Volume (8% or 45%)
 ECHO T - SmokeCrosshair / find bomb (only pressed)
 ECHO ================================================
 
